# ibex-agent-verification

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
benchmarks/: mobile-qa-engineer-v0.1.json  qa-engineer-core-v0.1.json  qa-suite-catalog.json
conformance/: action-envelope-v1.json  crewai-action-envelope-v1.json  verifiable-action-chain-v1.json
docs/: ACTION_ENVELOPE_V1.md  AI_QA_ENGINEER_SUITE.md  ARCHITECTURE.md  BRANCH_REDIRECT_EVIDENCE.md  CAUSAL_WAVEFORM_ADAPTER.md  CEREBRAS_CLOUD_RUNNER.md  CREWAI_ACTION_ENVELOPE_ADAPTER.md  CROSSWALK_CONTRACT_HARDENING_V0_2.md  EVIDENCE_BUNDLE_VERIFICATION.md  GITHUB_ACTION.md  HOSTED_CAUSAL_E2E_EVIDENCE_2026-06-24.md  HOSTED_CEREBRAS_EVIDENCE_2026-06-26.md  HOSTED_E2E_EVIDENCE_2026-06-24.md  IBEX_TRACE_ADAPTER.md  IBEX_VERILATOR_E2E.md  INFERENCE_EVIDENCE.md  MOBILE_QA_SUITE.md  MULTI_MODEL_EVIDENCE.md  PRODUCTION_TRANSITION_SOURCE_CONTRACT.md  PROOFQA_GITHUB_ACTION.md  REAL_FIRMWARE_GATE_DEMO.md  REAL_RTL_GATE_DEMO.md  RELEASE_ATTESTATIONS.md  RESPONSE_INTEGRITY_RECORD_V0_1.md  ROADMAP.md  SILICON_EVIDENCE_GATE.md  SILICON_GATE_DEMO.md  TIMING_ANALYSIS.md  TRAJECTORY_GATE_PIPELINE.md  TRANSITION_PHASE_CONTRACT.md  TRUSTED_TRANSITION_ARTIFACT_INGESTION.md  TRUSTED_TRANSITION_MANIFEST_PRODUCER.md  VERIFIABLE_ACTION_CHAIN.md  VERIFICATION_PROTOCOL.md  VERIFIER_DEPTH_AND_TRANSITION_AUTHORITY.md
examples/: guardrail-decision.d2.json
proofqa/: action.yml
schemas/: guardrail-decision.schema.json  proofqa-response-integrity-v0.1.schema.json
scripts/: bootstrap_ibex.sh  (+34 more)
(+168 files in other folders)
