[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ibex-agent-verification"
version = "0.6.0"
description = "Reproducible Ibex simulation, trace comparison, and causal timing evidence"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  {name = "Aleksei Safonov"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.scripts]
ibex-av = "ibex_agent_verification.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
