[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ibex-agent-verification"
version = "0.8.1"
description = "Tamper-evident verification evidence for Ibex silicon flows and hosted inference runs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
  {name = "Aleksei Safonov"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
cerebras = ["cerebras_cloud_sdk==1.67.0"]

[project.scripts]
ibex-av = "ibex_agent_verification.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ibex_agent_verification = ["schemas/*.json"]
